--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 # Database connection configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/medical_data
+spring.datasource.url=jdbc:mysql://db:3306/medical_data
 spring.datasource.username=root
 spring.datasource.password=200116
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,7 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
-
 # Thymeleaf configuration
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
@@ -20,7 +19,7 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
 # Server configuration
-server.port=8080
+server.port=8090
 
 # Spring Boot DevTools settings (if you are using DevTools)
 spring.devtools.restart.enabled=true
@@ -32,3 +31,7 @@ spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=600000
+
+logging.level.org.springframework.security=DEBUG
+
+
